# tess-ml-pipeline

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  sync_checkpoint_tic.py
.claude/: settings.local.json
.claude/skills/vsx-plot/: SKILL.md
.claude/skills/vsx-plot/examples/: TIC_610495795.md
.claude/skills/vsx-plot/types/: DSCT.md  EA.md  ROT.md
docs/: VSX_PLOTTING_GUIDE.md
notebooks/: anomaly_detection.ipynb  eda_tess.ipynb  ml_variable_stars.ipynb  periodicity_analysis.ipynb  tess_orbit_visualization.ipynb
scripts/: add_tic_to_catalog.py  download_cvz.py  make_clean_plot.py  query_tic_params.py  sync_checkpoint_tic.py  validate_with_vsx.py  verify_tic610495795.py
src/: __init__.py
src/tess/: AsyncDownloader.py  CVZPipeline.py  DataCleaner.py  FFICalibrate.py  FFIDownloader.py  FFIStarFinder.py  LightcurveBuilder.py  MLExport.py  RichProgress.py  SectorAnalyzer.py  StarCatalog.py  StreamingPipeline.py  TESS_FFI_App.py  VariableStarFinder.py  __init__.py  cli.py  combine_sectors.py  config.py  main.py
